[package]
name = "streaming"
version = "0.1.0"
edition = "2021"


[dependencies]
radix-common = { version = "1.2.0", features = ["serde"] }
sbor = { version = "1.2.0", features = ["serde"] }
radix-engine-interface = { version = "1.2.0" }
radix-engine = { version = "1.2.0" }
radix-client = { git = "https://github.com/ociswap/radix-client", features = [
    "gateway",
], optional = true }
env_logger = "0.11.3"
radix-event-stream = { git = "https://github.com/ociswap/radix-event-stream"}
redis = "0.25.3"
serde_json = "1.0.114"
serde = "1.0.197"
log = "0.4.21"
serde_yaml = { version = "0.9.33", optional = true }
chrono = "0.4.35"
colored = "2.1.0"
dyn-clone = "1.0.17"
anyhow = "1.0.81"
async-trait = "0.1.79"
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7.4", features = [
    "postgres",
    "time",
    "runtime-tokio",
    "chrono",
], optional = true }

[features]
default = ["gateway", "file", "database", "channel"]
database = ["sqlx"]
gateway = ["radix-client"]
file = ["serde_yaml"]
channel = []


[dev-dependencies]
sqlx = { version = "0.7.4", features = ["sqlite"] }


